--- a/ftd reg - first 3 days.ipynb
+++ b/ftd reg - first 3 days.ipynb
@@ -1110,7 +1110,7 @@
      "text": [
       "\n",
       "ftd в течение трёх дней после регистрации за период 6 - 18 марта (всего 13 дней) = 587\n",
-      "Это на 73.22% меньше чем в феврале\n",
+      "Это на -1605 или 73.22% меньше чем в феврале\n",
       "\n"
      ]
     },
@@ -1136,9 +1136,12 @@
     "    xlabel=\"march 2022\"\n",
     ")\n",
     "\n",
+    "diff = march_sample.shape[0] - feb_sample.shape[0]\n",
+    "perc = round(1 - march_sample.shape[0] / feb_sample.shape[0] , 4) * 100\n",
+    "\n",
     "print(f\"\"\"\n",
     "ftd в течение трёх дней после регистрации за период 6 - 18 марта (всего 13 дней) = {march_sample.shape[0]}\n",
-    "Это на {round(1 - march_sample.shape[0] / feb_sample.shape[0] , 4) * 100}% меньше чем в феврале\n",
+    "Это на {diff} или {perc}% меньше чем в феврале\n",
     "\"\"\")"
    ]
   },
@@ -1207,7 +1210,9 @@
     "    {title} \n",
     "    Число регистаций = {reg.shape[0]} ({(1 - prop) * 100:.4}%); число ftd = {ftd.shape[0]} ({prop * 100:.4}%)\n",
     "    Регистраций больше ftd на {reg.shape[0] - ftd.shape[0]}\n",
-    "    \"\"\")"
+    "    \"\"\")\n",
+    "    \n",
+    "    return prop"
    ]
   },
   {
@@ -1229,13 +1234,16 @@
       "    Март: \n",
       "    Число регистаций = 7433 (78.88%); число ftd = 1570 (21.12%)\n",
       "    Регистраций больше ftd на 5863\n",
-      "    \n"
+      "    \n",
+      "В марте было на 14.84% меньше ftd\n"
      ]
     }
    ],
    "source": [
-    "addition(feb_ftd, feb_reg, title=\"Февраль:\")\n",
-    "addition(march_ftd, march_reg, title=\"Март:\")"
+    "prop_feb = addition(feb_ftd, feb_reg, title=\"Февраль:\")\n",
+    "prop_march = addition(march_ftd, march_reg, title=\"Март:\")\n",
+    "\n",
+    "print(f\"В марте было на {(prop_feb - prop_march) * 100:.4}% меньше ftd\")"
    ]
   },
   {
@@ -1253,9 +1261,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !git add \".\\ftd reg - first 3 days.ipynb\"\n",
-    "# !git commit -m \"first eda\"\n",
-    "# !git push"
+    "!git add \".\\ftd reg - first 3 days.ipynb\"\n",
+    "!git commit -m \"add code\"\n",
+    "!git push"
    ]
   }
  ],
